// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSignatureStatus > should render as awaiting confirmations 1`] = `
<div>
  Awaiting confirmations
</div>
`;

exports[`MultiSignatureStatus > should render as awaiting other signatures 1`] = `
<div>
  Awaiting 1 other signature
</div>
`;

exports[`MultiSignatureStatus > should render as awaiting our signature 1`] = `
<div>
  Awaiting our signature
</div>
`;

exports[`MultiSignatureStatus > should render as multiSignature ready 1`] = `
<div>
  Ready to broadcast
</div>
`;

exports[`MultiSignatureStatus > should show as awaiting final signature 1`] = `
<div>
  Awaiting final signature
</div>
`;
